2005-04-05  Mike Kestner  <mkestner@novell.com>

	* gtk/*.custom : persistent delegates for most of the remaining 
	"interesting" methods.

2005-04-05  Dan Winship  <danw@novell.com>

	* gdk/PixbufLoader.custom: Fix the new constructors to make sure
	they call Close() in the event of an exception, to prevent a
	g_warning.

2005-04-05  Mike Kestner  <mkestner@novell.com>

	* gtk/DestroyHelper.cs : implement an internal DestroyNotify handler 
	to release GCHandles.
	* gtk/*.custom : rework existing persistent delegate implementations
	to use destroy notify or PersistentData.

2005-04-05  Alp Toker  <alp@atoker.com>

	* gtk/Menu.custom: don't re-implement the Screen getter in Gtk.Menu.
	Instead just return base.Screen, which is implemented by Widget.

2005-04-04  Dan Winship  <danw@novell.com>

	* pango/Scale.cs: rename the size constants to not have
	underscores in their names (and add obsolete aliases for the old
	names).

	* sample/GtkDemo/DemoTextView.cs: use the new names

2005-04-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark all the call scope callback params to quiet
	the warnings.

2005-04-04  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : hide some manually implemented callback methods.
	* gdk/*.custom : implement several methods containing persistent
	callback parameters.
	* generator/BoxedGen.cs : set gen_info.CurrentType in Generate.
	* generator/ClassGen.cs : set gen_info.CurrentType in Generate.
	* generator/Ctor.cs : set gen_info.CurrentMember in Generate.
	* generator/GenerationInfo.cs : add CurrentMember and CurrentType.
	* generator/Method.cs : set gen_info.CurrentMember in Generate.
	* generator/MethodBody.cs : always generate null guarding for array
	parameters, and add a nag for callback parameters without a scope attr.
	* generator/ObjectGen.cs : set gen_info.CurrentType in Generate.
	* generator/OpaqueGen.cs : set gen_info.CurrentType in Generate.
	* generator/Parameters.cs : kill NullOk. add Scope property.