@@ -186,7 +186,7 @@
       </Docs>
     </Member>
     <Member MemberName="AddCustom">
-      <MemberSignature Language="C#" Value="public void AddCustom (Gtk.FileFilterFlags needed, Gtk.FileFilterFunc func, IntPtr data, IntPtr notify);" />
+      <MemberSignature Language="C#" Value="public void AddCustom (Gtk.FileFilterFlags needed, Gtk.FileFilterFunc func);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -194,17 +194,11 @@
       <Parameters>
         <Parameter Name="needed" Type="Gtk.FileFilterFlags" />
         <Parameter Name="func" Type="Gtk.FileFilterFunc" />
-        <Parameter Name="data" Type="System.IntPtr" />
-        <Parameter Name="notify" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>
-	  Adds a rule to a filter that allows files based on a custom callback function. 
-	</summary>
+        <summary>Adds a rule to a filter that allows files based on a custom callback function.</summary>
         <param name="needed">a <see cref="T:System.Int32" /></param>
         <param name="func">a <see cref="T:Gtk.FileFilterFunc" /></param>
-        <param name="data">a <see cref="T:System.IntPtr" /></param>
-        <param name="notify">a <see cref="T:System.IntPtr" /></param>
         <remarks>
 	  The bitfield <paramref name="needed" /> which is passed in provides information
 	  about what sorts of information that the filter function needs;
