@@ -1,3 +1,8 @@
+2005-04-06  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/FileFilter.custom : AddCustom delegate is destroy notified.
+	* gtk/Gtk.metadata : hide FileFilter.AddCustom.  hide gtk_object_get|set.
+
 2005-04-05  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/*.custom : persistent delegates for most of the remaining 
